# DownloadManager

./: .gitignore  CMakeLists.txt  README.md
include/: ArgParser.h  Checksum.h  Config.h  ConfigManager.h  DownloadManagerClass.h  DownloadTask.h  HttpClient.h  Logger.h  ThreadPool.h
src/: ArgParser.cpp  Checksum.cpp  ConfigManager.cpp  DownloadManager.cpp  DownloadManagerClass.cpp  DownloadTask.cpp  HttpClient.cpp  Logger.cpp  ThreadPool.cpp
